ECMS-3217: Content Explorer: layout issue Fix Description: Allow the horizontal scrollbar appear when the width of Content Explorer portlet is smaller than total of the width of components inside it.

--- a/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/DefaultStylesheet.css
+++ b/apps/portlet-explorer/src/main/webapp/skin/webui/component/explorer/DefaultStylesheet.css
@@ -24,8 +24,9 @@
 
 .UIJCRExplorerPortlet {
 	overflow: hidden; /* orientation=rt */
+	overflow: auto;
 	background: white;
-    padding: 9px;
+  padding: 9px;
 }
 
 .UIJCRExplorerPortlet .LeftCotainer {
